Migrate to platform 2.7.0